istio/deployment/mysql-statefulset.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-demo
spec:
  type: NodePort        # Expose service port to host machine
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    nodePort: 30006     # Expose service port to host machine
  selector:
    app: db-demo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-demo
spec:
  replicas: 1
  serviceName: db-demo
  selector:
    matchLabels:
      app: db-demo
  template:
    metadata:
      labels:
        app: db-demo
        version: 5.7.18
    spec:
      containers:
      - name: db-demo
        image: mydemo/mysql:5.7.18
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        readinessProbe: # Check whether MySQL service is ready
          exec:
            # There's problems in the following readiness probe command:
            # The container mysql:5.7.18 starts MySQL process for initialization, then stop and restart it.
            # The probe command can success in initialization process, it causes the POD to be READY, and other
            # services will create long lived connections to MySQL (by connection pool). After MySQL restarts, 
            # these connections are broken, causes "Connection refused" exception.
            # The initialDelaySeconds is set to an estimated value, but it variates in different environment.
            command: ["mysql", "-hlocalhost", "-uroot", "-p123", "-P3306", "--database", "skywalking", "-e", "SELECT 1"]
          initialDelaySeconds: 45   # Wait initialDelaySeconds to check the first time
          periodSeconds: 5          # Wait periodSeconds to check next time
          timeoutSeconds: 2         # Timeout for check process
