istio/deployment/nacos-statefulset.yaml
kind: Service
apiVersion: v1
metadata:
  name: pub-nacos
spec:
  type: NodePort        # Expose service port to host machine
  ports:
  - name: http-nacos
    port: 8848
    targetPort: 8848
    nodePort: 30048     # Expose service port to host machine
  selector:
    app: pub-nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pub-nacos
spec:
  replicas: 1
  serviceName: pub-nacos
  selector:
    matchLabels:
      app: pub-nacos
  template:
    metadata:
      labels:
        app: pub-nacos
        version: 1.1.4
    spec:
      containers:
      - name: pub-nacos
        image: mydemo/nacos:1.1.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8848
        readinessProbe: # Check whether Nacos is ready
          httpGet:      # Wait until HTTP status ok
            path: /nacos
            port: 8848
          initialDelaySeconds: 3    # Wait initialDelaySeconds to check the first time
          periodSeconds: 5          # Wait periodSeconds to check next time
          timeoutSeconds: 2         # Timeout for check process
#      initContainers:
#      - name: wait-deps
#        image: busybox
#        imagePullPolicy: IfNotPresent
        # 1. Wait PODs of dependencies to be READY.
        # 2. Wait services of dependencies to be READY, including service DNS being available.
#        command: ['sh', '-c', 'until nslookup db-demo; do sleep 3; done;']
