istio/deployment/svc-stock-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-stock
spec:
  ports:
  - name: tcp-stock
    port: 20880
    targetPort: 20880
  selector:
    app: svc-stock
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-stock
  template:
    metadata:
      labels:
        app: svc-stock
        version: latest
    spec:
      containers:
      - name: svc-stock
        image: mydemo/stock
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 20880
        readinessProbe:  # Check whether Stock Service is ready
          #tcpSocket:    # Wait until TCP port is opened
          #  port: 20880
          # tcpSocket probe will connect and disconnect to 20880 periodically, 
          # cause massive Dubbo logs: "[DUBBO] disconnected from /10.1.0.1:33994 ..."
          exec:
            command: ["sh", "-c", "COUNT=`netstat -antp tcp|grep 20880|grep LISTEN -c`; if [ $COUNT -eq 1 ]; then exit 0; else exit 1; fi"]
          initialDelaySeconds: 3    # Wait initialDelaySeconds to check the first time
          periodSeconds: 5          # Wait periodSeconds to check next time
          timeoutSeconds: 1         # Timeout for check process
#      initContainers:
#      - name: wait-deps
#        image: busybox
#        imagePullPolicy: IfNotPresent
        # 1. Wait PODs of dependencies to be READY.
        # 2. Wait services of dependencies to be READY, including service DNS being available.
#        command: ['sh', '-c', 'until nslookup pub-nacos; do sleep 3; done;']
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: svc-stock
#spec:
#  host: svc-stock.default.svc.cluster.local
#  trafficPolicy:
#    loadBalancer:
#      simple: ROUND_ROBIN
#    connectionPool:
#      tcp:
#        maxConnections: 5
#        connectTimeout: 3000ms
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: svc-stock
#spec:
#  hosts:
#  - svc-stock.default.svc.cluster.local
#  tcp:
#  - match:
#    - port: 20880
#    route:
#    - destination:
#        host: svc-stock
#        port:
#          number: 20880
