istio/deployment/zipkin-statefulset.yaml
kind: Service
apiVersion: v1
metadata:
  name: pub-zipkin
spec:
  type: NodePort        # Expose service port to host machine
  ports:
  - name: http-zipkin
    port: 9411
    targetPort: 9411
    nodePort: 30041     # Expose service port to host machine
  selector:
    app: pub-zipkin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pub-zipkin
spec:
  replicas: 1
  serviceName: pub-zipkin
  selector:
    matchLabels:
      app: pub-zipkin
  template:
    metadata:
      labels:
        app: pub-zipkin
        version: 2.19.2
    spec:
      containers:
      - name: pub-zipkin
        image: mydemo/zipkin:2.19.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
        readinessProbe: # Check whether ZipKin is ready
          httpGet:      # Wait until HTTP status ok
            path: /zipkin
            port: 9411
          initialDelaySeconds: 3    # Wait initialDelaySeconds to check the first time
          periodSeconds: 5          # Wait periodSeconds to check next time
          timeoutSeconds: 2         # Timeout for check process
#      initContainers:
#      - name: wait-deps
#        image: busybox
#        imagePullPolicy: IfNotPresent
        # 1. Wait PODs of dependencies to be READY.
        # 2. Wait services of dependencies to be READY, including service DNS being available.
#        command: ['sh', '-c', 'until nslookup db-demo; do sleep 3; done;']
